--- a/pom.xml
+++ b/pom.xml
@@ -77,18 +77,67 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-compiler-plugin</artifactId>-->
+				<!--<configuration>-->
+					<!--<source>1.8</source>-->
+					<!--<target>1.8</target>-->
+					<!--<encoding>UTF-8</encoding>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-jar-plugin</artifactId>-->
+				<!--<configuration>-->
+					<!--<classesDirectory>target/classes/</classesDirectory>-->
+					<!--<archive>-->
+						<!--<manifest>-->
+							<!--&lt;!&ndash; 主函数的入口 &ndash;&gt;-->
+							<!--<mainClass>com.pramyness.demo.App</mainClass>-->
+							<!--&lt;!&ndash; 打包时 MANIFEST.MF文件不记录的时间戳版本 &ndash;&gt;-->
+							<!--<useUniqueVersions>false</useUniqueVersions>-->
+							<!--<addClasspath>true</addClasspath>-->
+							<!--<classpathPrefix>lib/</classpathPrefix>-->
+						<!--</manifest>-->
+						<!--<manifestEntries>-->
+							<!--<Class-Path>.</Class-Path>-->
+						<!--</manifestEntries>-->
+					<!--</archive>-->
+				<!--</configuration>-->
+			<!--</plugin>-->
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-dependency-plugin</artifactId>-->
+				<!--<executions>-->
+					<!--<execution>-->
+						<!--<id>copy</id>-->
+						<!--<phase>install</phase>-->
+						<!--<goals>-->
+							<!--<goal>copy-dependencies</goal>-->
+						<!--</goals>-->
+						<!--<configuration>-->
+							<!--<outputDirectory>${project.build.directory}/lib</outputDirectory>-->
+						<!--</configuration>-->
+					<!--</execution>-->
+				<!--</executions>-->
+			<!--</plugin>-->
 			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
 					<archive>
 						<manifest>
+							<addClasspath>true</addClasspath>
 							<mainClass>com.pramyness.demo.App</mainClass>
 						</manifest>
+						<manifestEntries>
+							<Class-Path>.</Class-Path>
+						</manifestEntries>
 					</archive>
 				</configuration>
+				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
 					<execution>
 						<id>make-assembly</id>
